--- a/pages/cart/cart.wxml
+++ b/pages/cart/cart.wxml
@@ -1,7 +1,7 @@
 <!--pages/cart/cart.wxml-->
 <view class="my-container">
 <!-- <button bindtap='addCart'>添加测试数据</button> -->
-  <view class="goodsWrap" wx:if="{{hasList}}" >
+  <view class="goodsWrap" wx:if="{{companys.length > 0}}">
     <view class="list" wx:for="{{companys}}" wx:for-item="citem" wx:for-index="cindex">
       <view class="title">
         <icon wx:if="{{citem.isSelected}}" type="success" color="#f23030" bindtap="shopSelectAll" data-index="{{cindex}}"/>
@@ -23,7 +23,7 @@
         <view class="lastDelete">
           <view class="fitst">
             <image src="../../images/buycar/p7_delete.png"></image>
-            <view>删除</view>
+            <view bindtap='delProduct' data-index="{{cindex}},{{index}}">删除</view>
           </view>
           <view>
             <view class="numberButton">
@@ -44,7 +44,7 @@
   <view wx:else class="cartElseImg">
     <image src="../../images/buycar/p14.png"></image>
   </view>
-  <view class="bottom-wrap" wx:if="{{hasList}}">
+  <view class="bottom-wrap" wx:if="{{companys.length > 0}}">
     <view class="choose-all">
       <icon wx:if="{{select_all_status}}" type="success" color="#f23030" bindtap="selectAll" />
       <icon wx:else type="circle" color="#000" bindtap="selectAll" />
