--- a/pages/market/market.wxss
+++ b/pages/market/market.wxss
@@ -1,72 +1,85 @@
-.market{
+.market {
     display: flex;
 }
-.maeketMenu{
-    width:180rpx;
-    color:#a9a9a9;
+
+.maeketMenu {
+    width: 180rpx;
+    min-height: 100%;
+    background-color: #fff;
     position: fixed;
     left: 0;
     overflow: auto;
-    height:100%;
+    height: 100%;
 }
-.maeketMenu>view{
+
+.maeketMenu>view {
     background: #fff;
+    color: #a9a9a9;
     height: 100rpx;
     line-height: 100rpx;
     background: #fff;
-    border:1rpx solid #d7d7d7;
+    border: 1rpx solid #d7d7d7;
     border-bottom: none;
-    border-left:none;
+    border-left: none;
     text-align: center;
-    font-size:30rpx;
+    font-size: 30rpx;
 }
-.maeketMenu>view:last-child{
-    border-bottom:1rpx solid #d7d7d7;
+
+.maeketMenu>view:last-child {
+    border-bottom: 1rpx solid #d7d7d7;
 }
-.maeketMenu>view:first-child{
-    border-top:none;
+
+.maeketMenu>view:first-child {
+    border-top: none;
 }
-.maeketContent{
+
+.maeketContent {
     margin-left: 185rpx;
-    flex:1;
+    flex: 1;
     padding: 20rpx;
 }
-.maeketContent>.noCollect{
-    height:800rpx;
+
+.maeketContent>.noCollect {
+    height: 800rpx;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.maeketContent>.noCollect>image{
-    width:400rpx;
-    height:400rpx;
+
+.maeketContent>.noCollect>image {
+    width: 400rpx;
+    height: 400rpx;
 }
-.floorList{
-    width:525rpx;
+
+.floorList {
+    width: 525rpx;
     overflow: hidden;
 }
-.floor{
-    height:60rpx;
+
+.floor {
+    height: 60rpx;
     line-height: 60rpx;
 }
-.floorList>view{
+
+.floorList>view {
     background: #fff;
-    width:175rpx;
-    height:110rpx;
+    width: 175rpx;
+    height: 110rpx;
     line-height: 110rpx;
     float: left;
     text-align: center;
-    color:#333;
-    border:1px solid #d7d7d7;
+    color: #333;
+    border: 1px solid #d7d7d7;
     box-sizing: border-box;
     font-weight: bold;
-    font-size:35rpx;
+    font-size: 26rpx;
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
 }
-.menuList.active{
-    color:#333;
-    background:transparent;
-    border-right:none;
+
+.menuList.active {
+    color: #333;
+    background: #f0eff5;
+    border-right: none;
 }
