--- a/pages/userInfo/myOrder/myOrder.wxml
+++ b/pages/userInfo/myOrder/myOrder.wxml
@@ -1,4 +1,5 @@
 <view class="my-container">
+
     <view class="head-nav">
         <block wx:for="{{navTabs}}" wx:key="*this">
             <view class="{{activeIndex == index ? 'active-item':''}}" data-id="{{index}}" bindtap="tapNavItem">{{item.title}}</view>
@@ -6,28 +7,32 @@
     </view>
     <view class="search-title">
         <view>
-            <view class="phone_one" bindtap="clickPerson">
-                <view class="phone_personal">{{firstPerson}}</view>
+            <view class="phone_one" bindtap="clickMarket">
+                <view class="phone_personal">{{marketName}}</view>
             </view>
             <view class="person_box">
-                <view class="phone_select" hidden="{{selectPerson}}">
-                    <view class="select_one" wx:for="{{selectList}}" bindtap="mySelect" data-me=""  data-id="{{item.id}}" data-index="{{index}}">{{item.name}}</view>
+                <view class="phone_select" hidden="{{hideMarket}}">
+                    <view class="select_one" bindtap="selectMarket"  data-index="">全部</view>
+                    <view class="select_one" wx:for="{{markets}}" bindtap="selectMarket" bindblur='blurMarket' data-index="{{index}}">{{item.name}}</view>
                 </view>
             </view>
         </view>
+
         <view>
-            <view class="phone_one" bindtap="clickPerson">
-                <view class="phone_personal">{{firstPerson}}</view>
+            <view class="phone_one" bindtap="clickFloor">
+                <view class="phone_personal">{{floorName}}</view>
             </view>
             <view class="person_box">
-                <view class="phone_select" hidden="{{selectPerson}}">
-                    <view class="select_one" wx:for="{{selectList}}" bindtap="mySelect" data-me=""  data-id="{{item.id}}" data-index="{{index}}">{{item.name}}</view>
+                <view class="phone_select" hidden="{{hideFloor}}">
+                    <view class="select_one" bindtap="selectFloor"  data-index="">全部</view>
+                    <view class="select_one" wx:for="{{stalls}}" bindtap="selectFloor" data-index="{{index}}">{{item.floorNum + "楼"}}</view>
                 </view>
             </view>
         </view>
+
         <view class="search-bar">
-            <icon type="search" size="16" class="search"/>
-            <input placeholder="请输入关键词" placeholder-class="placeholder" bindinput="inputShow" value="{{input_value}}"/>
+            <icon type="search" size="16" class="search" bindtap="search"/>
+            <input placeholder="请输入关键词" placeholder-class="placeholder" bindinput="inputKeywords" value="{{keywords}}" />
             <!-- 点击取消返回上一页 -->
             <icon hidden="{{cancel_icon}}" type="cancel"  color="grey" size="16" class="cancel-icon" bindtap="clearInput"/>
         </view>
@@ -35,11 +40,11 @@
     <view>
       <view>
           <view class="goodsWrap">
-              <view class="list" wx:for="{{orders[activeIndex]}}" wx:for-item="citem" data-id="{{citem.id}}" bindtap="goOrderDetail">
+              <view class="list" wx:for="{{orders[activeIndex]}}" wx:for-item="citem">
                   <view class="title">
                       <view class="first">
                           <image src="../../../images/index/p4_search_class1.png"></image>
-                          <view>{{citem.marketName + citem.companyName}}</view>
+                          <view bindtap='goStallStore' data-stall-id="{{citem.stallId}}" data-company-id="{{citem.busiCompId}}">{{citem.marketName + citem.companyName}}</view>
                       </view>
                       <view hidden="{{activeIndex != 0}}" class="payment">去付款</view>
                       <view hidden="{{activeIndex != 1}}" class="getGoods">待拿货</view>
@@ -48,8 +53,7 @@
                   <view hidden="{{activeIndex != 1}}" class="goodsCode">
                       <view>提货码：{{citem.pickUpCode}}</view>
                   </view>
-                  
-                  <view class="content" wx:for="{{citem.detailsVO}}">
+                  <view class="content" wx:for="{{citem.detailsVO}}" data-id="{{citem.id}}" bindtap="goOrderDetail">
                       <view class="comImg"><image src="{{item.imgUrl_main}}"></image></view>
                       <view class="second">
                           <view class="second1">{{item.productName}}</view>
